--- a/css/style.css
+++ b/css/style.css
@@ -486,6 +486,22 @@ progress {
   .blockquote-footer::before {
     content: "\2014\00A0"; }
 
+    
+    .page-dest .fe-651fff4e02b1c95619211f0b
+   {
+      display: flex !important;
+      flex-direction: column;
+      margin:auto
+    }
+    .sqs-html-content{
+      display: flex !important;
+      text-align: left !important;
+    }
+.page-dest img{
+  width: 300px;
+  height: 300px;
+}
+
 .img-fluid {
   max-width: 100%;
   height: auto; }
@@ -7892,6 +7908,7 @@ textarea.form-control-lg {
     text-align: center !important; } }
 
 @media (min-width: 992px) {
+  
   .float-lg-start {
     float: left !important; }
   .float-lg-end {
@@ -9304,7 +9321,9 @@ textarea {
     color: #fff; }
 
 .site-nav {
-  position: absolute;
+  
+  position: sticky;
+  background: #000;
   top: 0;
   z-index: 9;
   width: 100%; }
@@ -10197,6 +10216,9 @@ textarea {
 .section-2 {
   padding: 10rem 0 !important; }
   @media (max-width: 991.98px) {
+    .col-6{
+      width: 100% !important;
+    }
     .section-2 {
       padding: 3rem 0 !important; } }
 
