--- a/css/style.css
+++ b/css/style.css
@@ -9319,11 +9319,35 @@ textarea {
   font-weight: 700; }
   .logo:hover {
     color: #fff; }
-
+    .kutular-container{
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
+    }
+    .kutu{
+      display: flex;
+      align-items: center;
+      text-align: center;
+      flex-direction: column;
+      gap: 20px;
+      margin: 50px 0;
+      width: 23%;
+    }
+    .kutu-title{
+      color: #c16137;
+      font-weight: 600;
+    }
+.kutu-img img{
+  width: 300px;
+  height: 300px;
+  border-radius: 11px;
+}
 .site-nav {
   
   position: sticky;
-  background: #000;
+  background: #000000;
+  box-shadow: 0 0 15px #00000020;
+  backdrop-filter: blur(15px);
   top: 0;
   z-index: 9;
   width: 100%; }
@@ -10216,7 +10240,7 @@ textarea {
 .section-2 {
   padding: 10rem 0 !important; }
   @media (max-width: 991.98px) {
-    .col-6{
+    .bigs .col-6{
       width: 100% !important;
     }
     .section-2 {
